fix issue where there was a gap between media queries

--- a/sass/variables-site/_structure.scss
+++ b/sass/variables-site/_structure.scss
@@ -8,7 +8,7 @@ $padding: 1rem;
 
 
 // breakpoints
-$medium-down: 'max-width: 37.4rem';
+$medium-down: 'max-width: 39.9rem';
 $medium-up: 'min-width: 30rem';
 $large-up: 'min-width: 40rem';
 $xlarge-up: 'min-width: 86rem';
